<resources>
    <string name="app_name">练习</string>
    <string name="hello">Hello World!</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="change_word">改变文字</string>
    <string name="new_word">Hello world -Change</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="change_view_pager">viewpager的页面</string>
    <string name="change_fragment_view_pager">fragmentviewpager的页面</string>
    <string name="handler">进入Handler界面</string>
    <string name="connection">进入HTTPURLConnection界面</string>
    <string name="list_view">进入ListView界面</string>
    <string name="new_list_view">进入新的ListView界面</string>
    <string name="service">进入Service界面</string>
    <string name="broadcast">进入广播页面</string>
    <string name="content_provider">进入ContentProvider页面</string>
    <string name="slide_menu">进入滑动菜单页面</string>
    <string name="set_animator">进入设置动画效果页面</string>
    <string name="set_radio_button">进入设置单选框页面</string>
    <string name="set_option_menu">进入设置选项菜单页面</string>
    <string name="set_context_menu">进入设置上下文菜单页面</string>
    <string name="get_broadcast">接收到广播</string>
    <string name="fragment_first">这是第一个Fragment</string>
    <string name="input_data">输入数据</string>
    <string name="add_a">添加FragmentA</string>
    <string name="add_b">添加FragmentB</string>
    <string name="fragment_show">Fragment显示文字</string>
    <string name="activity_show">Activity显示文字</string>
    <string name="a">FragmentA</string>
    <string name="b">FragmentB</string>
    <string name="my_name">RealgodJJ</string>
    <string name="inner_handler">inner_handler的形式</string>
    <string name="extend_handler">extend_handler的形式</string>
    <string name="fuck_you_all">FUCK YOU ALL</string>
    <string name="get_internet_data">获取网络数据</string>
    <string name="start_service">开始服务</string>
    <string name="stop_service">结束服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="send_service">向服务传值</string>
    <string name="receive_service">向服务取值</string>
    <string name="static_send_disorder_broadcast">静态发送无序广播</string>
    <string name="dynamic_send_disorder_broadcast">动态发送无序广播</string>
    <string name="static_send_order_broadcast">静态发送有序广播</string>
    <string name="dynamic_send_order_broadcast">动态发送有序广播</string>
    <string name="get_call_log">显示电话记录</string>
    <string name="get_my_provider">获得数据库资料</string>
    <string name="first_item">第1个item</string>
    <string name="second_item">第2个item</string>
    <string name="third_item">第3个item</string>
    <string name="fourth_item">第4个item</string>
    <string name="fifth_item">第5个item</string>
    <string name="toggle_menu">切换菜单</string>
    <string name="set_alpha">透明度切换</string>
    <string name="set_scale">图片比例变换</string>
    <string name="set_translate">移动变换</string>
    <string name="set_rotate">旋转变换</string>
    <string name="set_continue_1">续播1</string>
    <string name="set_continue_2">续播2</string>
    <string name="set_blink">闪烁</string>
    <string name="change_activity">切换页面</string>
    <string name="layout_animation">布局动画</string>
    <string name="frame_animation">逐帧动画</string>
    <string name="choose_sex">请选择你的性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex_choice">您选择的性别是：%1$s</string>
    <string name="ask_happy">您今天是否开心？</string>
    <string name="happy">开心</string>
    <string name="unhappy">不开心</string>
    <string name="small_progressbar">小进度条</string>
    <string name="normal_progressbar">普通进度条</string>
    <string name="large_progressbar">超大进度条</string>
    <string name="horizontal_progressbar">水平进度条</string>
    <string name="add_main_process">增加主进度条</string>
    <string name="add_second_process">增加次进度条</string>
    <string name="rate_information">评分：%1$s\t\t\t步进：%2$s\t\t\t是否交互：%3$b</string>
    <string name="save">保存</string>
    <string name="settings">设置</string>
    <string name="more">更多</string>
    <string name="more1">子菜单1</string>
    <string name="more2">子菜单2</string>
    <string name="exit">退出</string>
    <string name="ask_exit">是否需要退出？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="set_handler">进入Handler界面</string>
    <string name="receive_handler_message">接收线程的消息</string>
    <string name="download">下载</string>
    <string name="realgodjj">RealgodJJ</string>
    <string name="download_fail">下载失败</string>
    <string name="count_time_max">10</string>
    <string name="game_begin">游戏开始</string>
    <string name="in_game">游戏中…</string>
    <string name="game_over">游戏结束</string>
    <string name="beat_gophers">打地鼠</string>
</resources>
