<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.BroadcastActivity">

    <Button
        android:id="@+id/bt_static_send_disorder_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/static_send_disorder_broadcast" />

    <Button
        android:id="@+id/bt_dynamic_send_disorder_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_send_disorder_broadcast" />

    <Button
        android:id="@+id/bt_static_send_order_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/static_send_order_broadcast" />

    <Button
        android:id="@+id/bt_dynamic_send_order_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/static_send_order_broadcast" />

</LinearLayout>