<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AnimatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_set_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alpha"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_set_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_scale"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_set_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_translate"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_set_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_rotate"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/img_2"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</LinearLayout>