<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HandlerActivity">

    <TextView
        android:id="@+id/tv_show_handler_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_receive_handler_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_handler_message"/>

    <Button
        android:id="@+id/bt_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"/>

    <ProgressBar
        android:id="@+id/pb_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"/>

    <TextView
        android:id="@+id/tv_show_count_down_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_time_max"/>

</LinearLayout>