<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_frame_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_img1"
                android:text="@string/first_item"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_img2"
                android:text="@string/second_item"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_3"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_img3"
                android:text="@string/third_item"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_4"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_img4"
                android:text="@string/fourth_item"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/img_5"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_img5"
                android:text="@string/fifth_item"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>